force-app/main/default/objects/Contract_Archive__c/Contract_Archive__c.object-meta.xml
<CustomObject>
    <label>Contract Archive</label>
    <nameField>
        <label>Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contracts Archive</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>