force-app/main/default/objects/Contract_Archive__c/fields/Contract_Approved__c.field-meta.xml
<CustomField>
    <fullName>Contract_Approved__c</fullName>
    <label>Contract Approved</label>
    <length>18</length>
    <type>Text</type>
</CustomField>