force-app/main/default/objects/Contract_Archive__c/fields/Contract_Archive_Link__c.field-meta.xml
<CustomField>
    <fullName>Contract_Archive_Link__c</fullName>
    <formula>&quot;https://alfred.service-now.com/x/steas/contracts-archive/record/x_steas_contracts_agreement/&quot;&amp;Sys_Id_External__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Archive Link</label>
    <type>Text</type>
</CustomField>