force-app/main/default/objects/Contract_Archive__c/fields/Contract_State__c.field-meta.xml
<CustomField>
    <fullName>Contract_State__c</fullName>
    <label>Contract State</label>
    <length>32</length>
    <type>Text</type>
</CustomField>