force-app/main/default/objects/Contract_Archive__c/fields/ContractSigned__c.field-meta.xml
<CustomField>
    <fullName>ContractSigned__c</fullName>
    <label>Contract Signed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>