force-app/main/default/objects/Contract_Archive__c/fields/Customer_Salesforce_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Salesforce_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Salesforce Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts (Customer Salesforce Id)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>