force-app/main/default/objects/Contract_Archive__c/fields/Final_Date_Of_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Final_Date_Of_Expiry__c</fullName>
    <label>Final Date Of Expiry</label>
    <type>Date</type>
</CustomField>