force-app/main/default/objects/Contract_Archive__c/fields/FinalExpirationConfirmed__c.field-meta.xml
<CustomField>
    <fullName>FinalExpirationConfirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Expiration Confirmed</label>
    <type>Checkbox</type>
</CustomField>