force-app/main/default/objects/Contract_Archive__c/fields/Internal_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Internal_Contract_Number__c</fullName>
    <label>Internal Contract Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>