force-app/main/default/objects/Contract_Archive__c/fields/Legal_Owner__c.field-meta.xml
<CustomField>
    <fullName>Legal_Owner__c</fullName>
    <label>Legal Owner</label>
    <length>40</length>
    <type>Text</type>
</CustomField>