force-app/main/default/objects/Contract_Archive__c/fields/LegalOwner__c.field-meta.xml
<CustomField>
    <fullName>LegalOwner__c</fullName>
    <label>Legal Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>