force-app/main/default/objects/Contract_Archive__c/fields/LegalOwnerCountry__c.field-meta.xml
<CustomField>
    <fullName>LegalOwnerCountry__c</fullName>
    <formula>IF(FIND(&apos; &apos;, TRIM( LegalOwner__c )) != 0,

   RIGHT(TRIM(LegalOwner__c), FIND(&apos; &apos;, REVERSE(TRIM(LegalOwner__c))) - 1),

   TRIM(LegalOwner__c)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Owner Country</label>
    <type>Text</type>
</CustomField>