force-app/main/default/objects/Contract_Archive__c/fields/Lookup_Info__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Info__c</fullName>
    <formula>&quot;Valid from: &quot; &amp; TEXT(Start_Date__c) &amp; &quot; to: &quot; &amp; TEXT(Final_Date_Of_Expiry__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lookup Info</label>
    <type>Text</type>
</CustomField>