force-app/main/default/objects/Contract_Archive__c/fields/Parent_Contract_Archive__c.field-meta.xml
<CustomField>
    <fullName>Parent_Contract_Archive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Contract Archive</label>
    <referenceTo>Contract_Archive__c</referenceTo>
    <relationshipLabel>Related Contracts Archive</relationshipLabel>
    <relationshipName>Contracts_Archive</relationshipName>
    <type>Lookup</type>
</CustomField>