force-app/main/default/objects/Contract_Archive__c/fields/Sub_Area__c.field-meta.xml
<CustomField>
    <fullName>Sub_Area__c</fullName>
    <description>Contract sub area</description>
    <label>Sub Area</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>