force-app/main/default/objects/Contract_Archive__c/fields/Sys_Id_External__c.field-meta.xml
<CustomField>
    <fullName>Sys_Id_External__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>System ID from ServiceNow External Contract ID</description>
    <externalId>true</externalId>
    <label>Sys Id External</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>